Fixed nexus-pax-logging and nexus-boot-features was working fine. - Fixed shiro dependency issues - Annotaions issue and improper overrides method issues - Missing MDCHelper imports